@@ -37,6 +37,8 @@ https://github.com/elastic/beats/compare/v6.4.0...master[Check the HEAD diff]
 
 *Filebeat*
 
+- Fixed a memory leak when harvesters are closed. {pull}7820[7820]
+
 *Heartbeat*
 
 *Metricbeat*
